added configuration to DI

--- a/Reviews.Api/appsettings.Development.json
+++ b/Reviews.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "Config": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
