--- a/Products.Api/appsettings.Development.json
+++ b/Products.Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
