--- a/ProductCatalog.Models/ProductCatalog.Models.csproj
+++ b/ProductCatalog.Models/ProductCatalog.Models.csproj
@@ -3,5 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+  </ItemGroup>
 
 </Project>
