--- a/ProductCatalog.Grpc/ProductCatalog.Grpc.csproj
+++ b/ProductCatalog.Grpc/ProductCatalog.Grpc.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\product.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\product.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
