--- a/ProductCatalog.Grpc/appsettings.Development.json
+++ b/ProductCatalog.Grpc/appsettings.Development.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;",
+  "Config": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
