--- a/Reviews.Models/Reviews.Models.csproj
+++ b/Reviews.Models/Reviews.Models.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+  </ItemGroup>
 </Project>
