--- a/Reviews.Api/appsettings.Development.json
+++ b/Reviews.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "Config": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;"
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;",
+    "ProductEndpoint": "https://localhost:5001"
   },
   "Logging": {
     "LogLevel": {
