--- a/ProductCatalog.Api/Properties/launchSettings.json
+++ b/ProductCatalog.Api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/products",
-      "applicationUrl": "http://localhost:5010;http://localhost:5011",
+      "applicationUrl": "http://localhost:5010;https://localhost:5011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
