--- a/Reviews.Grpc/Properties/launchSettings.json
+++ b/Reviews.Grpc/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Reviews.Api": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001",
+      "applicationUrl": "http://localhost:6000;https://localhost:6001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
