added migrations for registry

--- a/Registry.UI/appsettings.Development.json
+++ b/Registry.UI/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "Config": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Registry;Trusted_Connection=True;",
+    "ProductEndpoint": "https://localhost:5001",
+    "ReviewEndpoint": "https://localhost:6001"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
