--- a/Registry.UI/Registry.UI.csproj
+++ b/Registry.UI/Registry.UI.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="2.8.1" />
   </ItemGroup>
 
 </Project>
