partial auth code

--- a/Registry.UI/appsettings.Development.json
+++ b/Registry.UI/appsettings.Development.json
@@ -4,11 +4,18 @@
     "ProductEndpoint": "https://localhost:5001",
     "ReviewEndpoint": "https://localhost:6001"
   },
+  "oidc": {
+    "ClientId": "Registry",
+    "ClientSecret": "RegistryClientSecret",
+    "Authority": "https://localhost:8001",
+    "Scope": "openid, profile",
+    "ResponseType": "code id_token"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
