added approach for access tokens

--- a/ProductCatalog.Grpc/appsettings.Development.json
+++ b/ProductCatalog.Grpc/appsettings.Development.json
@@ -2,6 +2,10 @@
   "Config": {
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;"
   },
+  "Oidc": {
+    "Authority": "https://localhost:8001",
+    "ApiName": "productcatalog"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
