--- a/ProductCatalog.Grpc/ProductCatalog.Grpc.csproj
+++ b/ProductCatalog.Grpc/ProductCatalog.Grpc.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
