--- a/Registry.UI/appsettings.Development.json
+++ b/Registry.UI/appsettings.Development.json
@@ -8,7 +8,7 @@
     "ClientId": "Registry",
     "ClientSecret": "RegistryClientSecret",
     "Authority": "https://localhost:8001",
-    "Scope": "openid, profile",
+    "Scope": "openid, profile, productcatalog",
     "ResponseType": "code id_token"
   },
   "DetailedErrors": true,
