--- a/Reviews.Grpc/appsettings.Development.json
+++ b/Reviews.Grpc/appsettings.Development.json
@@ -3,6 +3,10 @@
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;",
     "ProductEndpoint": "https://localhost:5001"
   },
+  "Oidc": {
+    "Authority": "https://localhost:8001",
+    "ApiName": "reviews"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
