--- a/Reviews.Api/appsettings.Development.json
+++ b/Reviews.Api/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
   "Config": {
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;",
-    "ProductEndpoint": "https://localhost:5001"
-  },
-  "Oidc": {
-    "Authority": "https://localhost:8001",
-    "ApiName": "reviews"
+    "ProductEndpoint": "https://localhost:5001",
+    "Identity": {
+      "Authority": "https://localhost:8001",
+      "ApiName": "reviews"
+    }
   },
   "Logging": {
     "LogLevel": {
