--- a/Reviews.Grpc/Reviews.Grpc.csproj
+++ b/Reviews.Grpc/Reviews.Grpc.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Reviews.Repository\Reviews.Repository.csproj" />
+    <ProjectReference Include="..\Reviews.Shared\Reviews.Shared.csproj" />
   </ItemGroup>
 
 </Project>
