--- a/ProductCatalog.Api/Properties/launchSettings.json
+++ b/ProductCatalog.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "ProductCatalog.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/products",
       "applicationUrl": "http://localhost:5010;https://localhost:5011",
       "environmentVariables": {
@@ -20,7 +20,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/products",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
