modified client secret

--- a/Registry.UI/appsettings.Development.json
+++ b/Registry.UI/appsettings.Development.json
@@ -6,7 +6,7 @@
   },
   "oidc": {
     "ClientId": "Registry",
-    "ClientSecret": "RegistryClientSecret",
+    "ClientSecret": "7699023",
     "Authority": "https://localhost:8001",
     "Scope": "openid, profile, productcatalog, reviews, roles",
     "ResponseType": "code id_token"
