IDP docker ready

--- a/Registry.IDP/Properties/launchSettings.json
+++ b/Registry.IDP/Properties/launchSettings.json
@@ -21,11 +21,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    //"Docker (1)": {
-    //  "commandName": "Docker",
-    //  "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-    //  "publishAllPorts": true,
-    //  "useSSL": true
-    //}
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    }
   }
 }
