--- a/Registry.IDP/appsettings.Docker.json
+++ b/Registry.IDP/appsettings.Docker.json
@@ -1,22 +1,20 @@
 {
   "HttpServer": {
     "Http": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 8000,
       "Scheme": "http"
     },
     "Https": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 8001,
       "Scheme": "https",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser"
       // On Mac/Linux specify the file path to the certificate instead of a certificate store
-      // "FilePath": "/path/to/certificate"
+      "FilePath": "/app/https/localhost.pfx"
     }
   },
   "ConnectionStrings": {
-    "IdentityDatabase": "Server=(localdb)\\mssqllocaldb;Database=Identity;Trusted_Connection=True;"
+    "IdentityDatabase": "Server=172.31.32.1;Database=Identity;User Id=serviceuser;Password=serviceuser;"
   },
   "Logging": {
     "LogLevel": {
