--- a/ProductCatalog.Api/Properties/launchSettings.json
+++ b/ProductCatalog.Api/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,23 +7,27 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "ProductCatalog.Api": {
+    "ProductCatalog.Api (1)": {
       "commandName": "Project",
-      "launchBrowser": false,
       "launchUrl": "api/products",
-      "applicationUrl": "http://localhost:5010;https://localhost:5011",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5010;https://localhost:5011"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchUrl": "api/products",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "api/products",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/products",
+      "publishAllPorts": true
     }
   }
 }
