--- a/ProductCatalog.Grpc/Properties/launchSettings.json
+++ b/ProductCatalog.Grpc/Properties/launchSettings.json
@@ -1,12 +1,17 @@
-﻿{
+{
   "profiles": {
-    "ProductCatalog.Grpc": {
+    "ProductCatalog.Grpc (1)": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
