--- a/ProductCatalog.Api/appsettings.Development.json
+++ b/ProductCatalog.Api/appsettings.Development.json
@@ -1,6 +1,22 @@
 {
-  "Config": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;"
+  "ConnectionStrings": {
+    "ProductDatabase": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;"
+  },
+  "HttpServer": {
+    "Http": {
+      "Host": "localhost",
+      "Port": 5010,
+      "Scheme": "http"
+    },
+    "Https": {
+      "Host": "localhost",
+      "Port": 5011,
+      "Scheme": "https",
+      "StoreName": "My",
+      "StoreLocation": "CurrentUser"
+      // On Mac/Linux specify the file path to the certificate instead of a certificate store
+      // "FilePath": "/path/to/certificate"
+    }
   },
   "Oidc": {
     "Authority": "https://localhost:8001",
