--- a/ProductCatalog.Api/appsettings.Docker.json
+++ b/ProductCatalog.Api/appsettings.Docker.json
@@ -1,5 +1,30 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProductDatabase": "Server=172.31.32.1;Database=ProductCatalog;User Id=serviceuser;Password=serviceuser;"
+  },
+  "HttpServer": {
+    "Http": {
+      "Host": "0.0.0.0",
+      "Port": 5010,
+      "Scheme": "http"
+    },
+    "Https": {
+      "Host": "0.0.0.0",
+      "Port": 5011,
+      "Scheme": "https",
+      // On Mac/Linux specify the file path to the certificate instead of a certificate store
+      "FilePath": "/app/https/localhost.pfx"
+    }
+  },
+  "Oidc": {
+    "Authority": "https://172.31.32.1:8001",
+    "ApiName": "productcatalog"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
