--- a/ProductCatalog.Grpc/appsettings.Docker.json
+++ b/ProductCatalog.Grpc/appsettings.Docker.json
@@ -1,19 +1,17 @@
 {
   "ConnectionStrings": {
-    "ProductDatabase": "Server=(localdb)\\mssqllocaldb;Database=ProductCatalog;Trusted_Connection=True;"
+    "ProductDatabase": "Server=172.31.32.1;Database=ProductCatalog;User Id=serviceuser;Password=serviceuser;"
   },
   "HttpServer": {
     "Https2": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 5001,
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser"
       // On Mac/Linux specify the file path to the certificate instead of a certificate store
-      // "FilePath": "/path/to/certificate"
+      "FilePath": "/app/https/localhost.pfx"
     }
   },
   "Oidc": {
-    "Authority": "https://localhost:8001",
+    "Authority": "https://172.31.32.1:8001",
     "ApiName": "productcatalog"
   },
   "Logging": {
