--- a/ProductCatalog.Grpc/Dockerfile
+++ b/ProductCatalog.Grpc/Dockerfile
@@ -21,5 +21,9 @@ RUN dotnet publish "ProductCatalog.Grpc.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
+# This root cert file is copied from the original cert location so it can be included in the image
+# This is required since the product catalog api calls the identity server and root verification will fail without it.
+ADD myCA.pem /usr/local/share/ca-certificates/myCA.crt
+RUN update-ca-certificates
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "ProductCatalog.Grpc.dll"]
