updated docker file

--- a/ProductCatalog.Api/Dockerfile
+++ b/ProductCatalog.Api/Dockerfile
@@ -21,7 +21,8 @@ RUN dotnet publish "ProductCatalog.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-# This crt file is copied from the original cert location so it can be included in the image
+# This root cert file is copied from the original cert location so it can be included in the image
+# This is required since the product catalog api calls the identity server and root verification will fail without it.
 ADD myCA.pem /usr/local/share/ca-certificates/myCA.crt
 RUN update-ca-certificates
 COPY --from=publish /app/publish .
