--- a/Reviews.Grpc/appsettings.Docker.json
+++ b/Reviews.Grpc/appsettings.Docker.json
@@ -1,20 +1,18 @@
 {
   "ConnectionStrings": {
-    "ReviewDatabase": "Server=(localdb)\\mssqllocaldb;Database=Reviews;Trusted_Connection=True;"
+    "ReviewDatabase": "Server=172.31.32.1;Database=ProductCatalog;User Id=serviceuser;Password=serviceuser;"
   },
-  "ProductEndpoint": "https://localhost:5001",
+  "ProductEndpoint": "https://172.31.32.1:5001",
   "HttpServer": {
     "Https2": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 6001,
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser"
       // On Mac/Linux specify the file path to the certificate instead of a certificate store
-      // "FilePath": "/path/to/certificate"
+      "FilePath": "/app/https/localhost.pfx"
     }
   },
   "Oidc": {
-    "Authority": "https://localhost:8001",
+    "Authority": "https://172.31.32.1:8001",
     "ApiName": "reviews"
   },
   "Logging": {
