added docker support for reviews

--- a/Registry.UI/appsettings.Development.json
+++ b/Registry.UI/appsettings.Development.json
@@ -7,7 +7,7 @@
   "oidc": {
     "ClientId": "Registry",
     "ClientSecret": "7699023",
-    "Authority": "https://localhost:8001",
+    "Authority": "https://172.31.32.1:8001",
     "Scope": "openid, profile, productcatalog, reviews, roles",
     "ResponseType": "code id_token"
   },
