--- a/Reviews.Grpc/appsettings.Docker.json
+++ b/Reviews.Grpc/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ReviewDatabase": "Server=172.31.32.1;Database=ProductCatalog;User Id=serviceuser;Password=serviceuser;"
+    "ReviewDatabase": "Server=172.31.32.1;Database=Reviews;User Id=serviceuser;Password=serviceuser;"
   },
   "ProductEndpoint": "https://172.31.32.1:5001",
   "HttpServer": {
