--- a/Registry.UI/Properties/launchSettings.json
+++ b/Registry.UI/Properties/launchSettings.json
@@ -11,10 +11,10 @@
     "Registry.UI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:4000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:4000;https://localhost:4001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
