--- a/Registry.UI/appsettings.Docker.json
+++ b/Registry.UI/appsettings.Docker.json
@@ -1,25 +1,23 @@
 {
   "ConnectionStrings": {
-    "RegistryDatabase": "Server=(localdb)\\mssqllocaldb;Database=Registry;Trusted_Connection=True;"
+    "RegistryDatabase": "Server=172.31.32.1;Database=Registry;User Id=serviceuser;Password=serviceuser;"
   },
   "Config": {
-    "ProductEndpoint": "https://localhost:5001",
-    "ReviewEndpoint": "https://localhost:6001"
+    "ProductEndpoint": "https://172.31.32.1:5001",
+    "ReviewEndpoint": "https://172.31.32.1:6001"
   },
   "HttpServer": {
     "Http": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 4000,
       "Scheme": "http"
     },
     "Https": {
-      "Host": "localhost",
+      "Host": "0.0.0.0",
       "Port": 4001,
       "Scheme": "https",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser"
       // On Mac/Linux specify the file path to the certificate instead of a certificate store
-      // "FilePath": "/path/to/certificate"
+      "FilePath": "/app/https/localhost.pfx"
     }
   },
   "oidc": {
